--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,16 +12,13 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-.chart-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 20px;
+/* App.css */
+.chartContainer {
+  width: 90%; /* Or adjust according to your layout needs */
+  margin: 0 auto; /* Center the container */
+  height: auto; /* Adjust height as needed or keep it auto */
 }
 
-.chart-summary {
-  max-width: 360px; /* Fixed width for consistency */
-}
 
 .bar-chart-container {
   max-width: 360px; /* Fixed width for the chart */
